# oauth-preset-manager

./: .gitignore  AGENTS.md  README.ko.md  README.md  install.sh  profile_quota.py  pyproject.toml  test_quota_final.py  test_quota_simple.py
opm/: __init__.py  cli.py  core.py  i18n.py  tui.py
