[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oauth-preset-manager"
version = "0.1.0"
description = "Manage OpenCode OAuth presets with ease"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["oauth", "opencode", "preset", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
opm = "opm.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/oauth-preset-manager"
Repository = "https://github.com/yourusername/oauth-preset-manager"

[tool.setuptools]
packages = ["opm"]
